Updated all the notebooks and solutions to reflect @mattwcraig suggestions.

--- a/01b_workflow.ipynb
+++ b/01b_workflow.ipynb
@@ -30,7 +30,7 @@
     "\n",
     "We will build the web app using a Jupyter notebook where our workflow will:\n",
     "- **load a data file** with global land-ocean temperature data and\n",
-    "- **smooth the data with several algorithms**.\n",
+    "- **smooth the data with an algorithm with different smoothing parameters**.\n",
     "- In the GUI, you should be able to **select a particular range of years** and\n",
     "- **create a new data file** containing the smoothed data for desired time range.\n",
     "\n",
