--- a/02b_widgets.ipynb
+++ b/02b_widgets.ipynb
@@ -86,7 +86,7 @@
     "\n",
     "Let's add an import statement for Jupyter widgets (aka `ipywidgets`). We will use a lot of widgets, so it's good to `import ipywidgets as widgets`, or something similarly short. \n",
     "\n",
-    "Add an import statement below:"
+    "**EXERCISE**: Add an import statement below:"
    ]
   },
   {
@@ -245,7 +245,7 @@
    "source": [
     "Widgets, like other Python objects, have attributes. Recall that to set the value of an attribute of an object, we use 'dot notation' (e.g. `box.width `sets the `width` attribute of object `box`).\n",
     "\n",
-    "Set the `min` and `max` attributes of the slider widget.  Then look back at the widget"
+    "**EXERCISE**: Set the `min` and `max` attributes of the slider widget.  Then look back at the `year_range` widget above."
    ]
   },
   {
@@ -313,8 +313,9 @@
     "```python\n",
     "selected_df = original_df[(original_df['Year'] >= from_year) & (original_df['Year'] <= to_year)]\n",
     "```\n",
+    "The only difference is this time, we need to replace \"from_year\" and \"to_year\" with the value of our slider.\n",
     "\n",
-    "The only difference is this time, we need to replace \"from_year\" and \"to_year\" with the value of our slider. Try that on your own in the cells below."
+    "**EXERCISE**:  Update the `selected_df` dataframe to reflect the range specified by the slider.  You can test if your solution works by executing the next cell and then running the cell below it."
    ]
   },
   {
@@ -536,7 +537,7 @@
    "id": "0be7ffd7-09d9-4569-91e3-859ca13eee93",
    "metadata": {},
    "source": [
-    "Hmmmm.... it seems that we've gotten an error. Sort of a weird one. I think we are missing something on our observe call. Can you think of what it is? I think it has something to do with the `observe()` parameters. Go ahead and make the changes needed below."
+    "**EXERCISE**: Notice the previous cell returned an exception. Sort of a weird one. We are missing something on our `observe` call. Can you think of what it is? Go ahead and make the changes needed below."
    ]
   },
   {
@@ -730,7 +731,7 @@
     "#| export\n",
     "from ipydatagrid import DataGrid\n",
     "\n",
-    "# Define a DatGrid widget containing our Pandas dataframe setting column and row sizes\n",
+    "# Define a DataGrid widget containing our Pandas dataframe setting column and row sizes\n",
     "selected_data_grid = DataGrid(selected_df, header_visibility=\"column\", auto_fit_columns=True)"
    ]
   },
@@ -834,7 +835,7 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "window_size = widgets.IntSlider(description = 'Window Size', value=20, min=1, max=100,\n",
+    "window_size = widgets.IntSlider(description = 'Window Size', value=20, min=2, max=100,\n",
     "                                style={'description_width': 'initial'})"
    ]
   },
@@ -853,7 +854,7 @@
    "id": "88fcb6f8",
    "metadata": {},
    "source": [
-    "For the Polynomial order, we will use an integer text field input that is bounded between 0 and 10. "
+    "For the Polynomial order, we will use an integer text field input that is bounded between 1 and 10."
    ]
   },
   {
@@ -864,7 +865,7 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "poly_order = widgets.BoundedIntText(description = 'Poly Order', min=0, value=3, max=10,\n",
+    "poly_order = widgets.BoundedIntText(description = 'Poly Order', min=1, value=3, max=10,\n",
     "                                    style={'description_width': 'initial'})"
    ]
   },
@@ -889,7 +890,7 @@
     "2. Use `original_df` to update selected\n",
     "3. Update Datagrid display of `selected_df`\n",
     "\n",
-    "Let's write a function that takes care of the first two.  Replace the comments in the `on_window_size_change` function in the cell below with the correct lines to accomplish those functions."
+    "**EXERCISE**: Modify the function in the next cell so that it takes care of the first two items listed above.  Replace the comments in the `on_window_size_change` function in the cell below with the correct lines to accomplish those functions."
    ]
   },
   {
@@ -957,7 +958,7 @@
    "source": [
     "Sweet! If you still have an Datagrid View of the `selected_df` dataframe open, and you increase the value of `window_size` you will see that there is now a \"Smoothed Data\"\" column. \n",
     "\n",
-    "Now create a Slider widget that is linked to the `poly_order`. "
+    "**EXERCISE**: Now create a Slider widget that is linked to the `poly_order`. "
    ]
   },
   {
@@ -1025,7 +1026,9 @@
    "id": "675567a7",
    "metadata": {},
    "source": [
-    "Oh oh! Why did this happen? Fortunately the error message is pretty clear. We need to ensure that our `poly_order` Slider doesn't allow a user to select a value greater than `window_size - 1`. But we also don't want to let `poly_order` be greater than 10 to avoid poor conditioning. Where should we put this validation? Well, we are going to need to update the \"max\" trait of `poly_order` every time `window_size` is updated. So we need to add a line to add a line in the `on_window_size_change` function."
+    "Oh oh! Why did this happen? Fortunately the error message is pretty clear. We need to ensure that our `poly_order` Slider doesn't allow a user to select a value greater than `window_size - 1`. But we also don't want to let `poly_order` be greater than 10 to avoid poor conditioning. Where should we put this validation? \n",
+    "\n",
+    "**EXERCISE**: Update the \"max\" trait of `poly_order` every time `window_size` is updated. So we need to add a line to add a line in the `on_window_size_change` function."
    ]
   },
   {
@@ -1134,7 +1137,7 @@
     "plt.show()\n",
     "```\n",
     "\n",
-    "We are going to want to turn this into an observe function that accepts a \"change\" parameter. Is there anything we need to fix here to make this work? It's very minor. Replace the commented code in the cell below with functional code so that it works in our current notebook."
+    "**EXERCISE** We are going to want to turn set of commands into a handler function that accepts a \"change\" parameter and draws the plot. Is there anything we need to fix here to make this work? It's very minor. Replace the commented code in the cell below with functional code so that it works in our current notebook."
    ]
   },
   {
@@ -1157,12 +1160,20 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b4e597e2",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "3ced1b75-94e3-462a-b4fd-8697652f63aa",
    "metadata": {},
    "source": [
-    "Okay that works, but the plot is showing up inline in our notebook. Once created, it can't be modified except by changing the data and re-executing the cell.  It sure would be nice if we could have the plot automatically update when the data year_range or smoothing parameters are changed.  How do we do that?\n",
+    "Okay that works, but the plot is showing up inline in our notebook. Once created, it can't be modified except by changing the data and re-executing the cell.  It sure would be nice if we could have the plot automatically update when the data year range or smoothing parameters are changed.  How do we do that?\n",
     "\n",
-    "Yeah, we can use an Output widget again, just like we did with the dataframe.  Let's call it `plot_view`. "
+    "Yeah, we can use an Output widget again, just like we did with the dataframe.\n",
+    "\n",
+    "**EXERCISE** Create a `plot_view` output widget (you don't need to display it as it will be initially empty, although you certainly can if you want to test it)."
    ]
   },
   {
@@ -1191,7 +1202,7 @@
     "        display(selected_df)\n",
     "```\n",
     "\n",
-    " Let's do that again, but this time for the plot. Go ahead and adapt this approach below so that instead of displaying the selected dataframe, it displays an updated plot."
+    "**EXERCISE** Go ahead and adapt this approach in the cell below so that instead of displaying the selected dataframe, the function displays an updated plot."
    ]
   },
   {
@@ -1328,7 +1339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "id": "7e91e724-9497-4571-ab90-9b1652cbd868",
    "metadata": {},
    "outputs": [],
