--- a/02c_layout.ipynb
+++ b/02c_layout.ipynb
@@ -260,7 +260,16 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "selected_data_accordion = widgets.Accordion(titles=('Selected Data',))\n",
+    "selected_data_accordion = widgets.Accordion(titles=('Selected Data',))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "67673900",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "selected_data_accordion"
    ]
   },
@@ -301,7 +310,7 @@
    "source": [
     "That's a lot of text in one error message. What happened here? Our error is telling us that the `children` trait expected a tuple, and not an Output widget. Do you remember when I said the syntax of a tuple looks the same as a list but with parenthesis? Well, the problem is parenthesis are used in many other situations in Python, so how can the Python interpreter tell the difference between a single element tuple and just a variable inside of parenthesis for another reason.  Tuples with one element are written with a comma following the single element, this makes it clear to the Python interpreter that you are creating a tuple and not just using parenthesis for another reason.  \n",
     "\n",
-    "Fix the next cell so that you properly set the children attribute equal to a tuple with one element, the `selected_data_grid` widget."
+    "**EXERCISE** Fix the next cell so that you properly set the children attribute equal to a tuple with one element, the `selected_data_grid` widget."
    ]
   },
   {
@@ -312,9 +321,7 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "# %answer key/dashboard/main.py 27\n",
-    "\n",
-    "selected_data_accordion.children = (selected_data_grid,)"
+    "# %answer key/dashboard/main.py 28"
    ]
   },
   {
@@ -340,7 +347,10 @@
    "id": "81cbe9cb-d944-4692-aaa3-ff827135086c",
    "metadata": {},
    "source": [
-    "If your accordion is closed, `selected_index` will be `None` and so this will print `None`. We can open the accordion programmatically by setting the `selected_index` to the index of the accordion we want to open. In this case there is only one. Go ahead and try to open the accordion programmatically."
+    "If your accordion is closed, `selected_index` will be `None` and so this will print `None`. \n",
+    "We can open the accordion programmatically by setting the `selected_index` to the index of the accordion we want to open. In this case there is only one. \n",
+    "\n",
+    "**EXERCISE**: Go ahead and try to open the accordion programmatically using the next cell."
    ]
   },
   {
@@ -351,9 +361,7 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "# %answer key/dashboard/main.py 31\n",
-    "\n",
-    "selected_data_accordion.selected_index = 0"
+    "# %answer key/dashboard/main.py 32"
    ]
   },
   {
@@ -410,7 +418,9 @@
    "source": [
     "### Layout widget objects\n",
     "\n",
-    "In most cases, we can use the `Layout` object to set the layout of a particular widget on initialization.  Let's display the HTML variables we just defined in `HTML` widgets using the `Layout` object to set the width of the widgets to be the same."
+    "In most cases, we can use the `Layout` object to set the layout of a particular widget on initialization.  Let's display the HTML variables we just defined in `HTML` widgets using the `Layout` object to set the width of the widgets to be the same.\n",
+    "\n",
+    "**PRO TIP**: `Layout` is just a widget, so you can observe its traits and react to changes in those traits like any other widget."
    ]
   },
   {
@@ -421,8 +431,9 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "intro_text = widgets.HTML(value = INTRO_TEXT, layout = widgets.Layout(max_width = '500px'))\n",
-    "data_source_text = widgets.HTML(value = SOURCES_TEXT, layout = widgets.Layout(max_width = '500px'))"
+    "html_layout = widgets.Layout(max_width = '500px')\n",
+    "intro_text = widgets.HTML(value = INTRO_TEXT, layout = html_layout)\n",
+    "data_source_text = widgets.HTML(value = SOURCES_TEXT, layout = html_layout)"
    ]
   },
   {
@@ -454,27 +465,7 @@
     "\n",
     "The arrangement where every widget is stacked one on top of the other isn't ideal for a data dashboard that we expect users to access from a desktop. Jupyter widgets has several container widgets to arrange widgets in various ways. Perhaps two of the most handy are the `HBox` and `VBox` widgets, which arrange widgets horizontally and vertically, respectively. If you are familiar with `FlexBox`, [those properties are available under the hood](https://ipywidgets.readthedocs.io/en/7.6.3/examples/Widget%20Styling.html#The-Flexbox-layout), but we will not cover them here (we will use one of those properties below). \n",
     "\n",
-    "Let's create a `HBox` to put the curve parameter widgets side by side."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9076da82-ae76-4153-9834-848209206c59",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "window_size"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b0f5d9a8-5f28-4f76-816e-9f6bd65fe1f5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "poly_order"
+    "Let's create a `HBox` to put the curve parameter widgets (`window_size` and `poly_order`) side by side."
    ]
   },
   {
@@ -529,7 +520,7 @@
    "source": [
     "Nice! This looks good because this `HBox` is about as wide as our `year_range` slider.  Notice that we can pass in the children as a parameter to the widget, or change the children trait after the widget has already been instantiated. \n",
     "\n",
-    "Now create a `VBox` vertical container that holds the descriptive text (`intro_text`, `data_source_text`) and `curve_parameter_widgets` and `year_range` widgets.  This will allow us to stack the widgets on top of each other."
+    "**EXERCISE**: Create a `VBox` vertical container that holds the descriptive text (`intro_text`, `data_source_text`) and `curve_parameter_widgets` and `year_range` widgets.  This will allow us to stack the widgets on top of each other."
    ]
   },
   {
@@ -540,12 +531,10 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "# %answer key/dashboard/main.py 47\n",
+    "# %answer key/dashboard/main.py 46\n",
     "\n",
     "# Create a VBox to hold the description and control widgets\n",
-    "desc_and_ctrl_box = widgets.VBox()\n",
-    "# add children intro_text, data_source_text, year_range, curve_parameter_widgets\n",
-    "desc_and_ctrl_box.children = (intro_text, data_source_text, year_range, curve_parameter_widgets)"
+    "# add children intro_text, data_source_text, year_range, curve_parameter_widgets\n"
    ]
   },
   {
@@ -582,7 +571,7 @@
    "id": "fb1dd1b0-7930-465d-8598-65f32b2a7539",
    "metadata": {},
    "source": [
-    "Hmmm... that seemed to add a little padding, but only to the outside of the `desc_and_ctrl_box` container. Can you guess how we might loop through and add padding to each of the child widgets? Try it below."
+    "**EXERCISE**: Hmmm... that seemed to add a little padding, but only to the outside of the `desc_and_ctrl_box` container. Can you guess how we might loop through and add padding to each of the child widgets? Try it below."
    ]
   },
   {
@@ -593,11 +582,9 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "# %answer key/dashboard/main.py 52\n",
+    "# %answer key/dashboard/main.py 51\n",
     "\n",
-    "# how might we add padding to each of the widgets\n",
-    "for child in desc_and_ctrl_box.children: # how might we add padding to each of the widgets\n",
-    "    child.layout.margin = '15px 0 15px 0'  # top, right, bottom, left"
+    "# how might we add padding to each of the widgets\n"
    ]
   },
   {
@@ -605,7 +592,7 @@
    "id": "4c883a10-3dbd-4c66-af69-12961ff62d09",
    "metadata": {},
    "source": [
-    "That looks a lot better! Now lets take care of the right side of our dashboard."
+    "That looks a lot better! Now take care of the right side of our dashboard by creating a `VBox` container containing the `selected_data_accordion` and `plot_view` widgets."
    ]
   },
   {
@@ -616,10 +603,9 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "# %answer key/dashboard/main.py 54\n",
+    "# %answer key/dashboard/main.py 53\n",
     "\n",
-    "# Add a vertical box holding both table and plot visualizations of selected data\n",
-    "data_box = widgets.VBox(children = (selected_data_accordion, plot_view)) # add the selected_data_accordion and the plot_output to a VBox widget called data_box"
+    "# Add a vertical box holding both table and plot visualizations of selected data\n"
    ]
   },
   {
