--- a/02d_dashboard_test.ipynb
+++ b/02d_dashboard_test.ipynb
@@ -36,6 +36,14 @@
     "\n",
     "main_widget # display the main widget"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1e14b929",
+   "metadata": {},
+   "source": [
+    "**Isn't nbdev great!** Instead of playing with toy examples, we can build a sophisticated, clean Python application from a series of tutorial-style notebooks. This dashboard was produced from the tutorial notebooks and its development history is recorded in those notebooks."
+   ]
   }
  ],
  "metadata": {
