--- a/01a_getting_started.ipynb
+++ b/01a_getting_started.ipynb
@@ -18,6 +18,14 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8ab29772",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "27a9e5a7-f601-4d1e-93db-196ecc270885",
    "metadata": {},
@@ -143,6 +151,24 @@
   },
   {
    "cell_type": "markdown",
+   "id": "25f45786",
+   "metadata": {},
+   "source": [
+    "**EXERCISE:** Pick a widget you like and display it in the cell below (**Hint**: Examine the linked documentation to see how to implement each widget)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bacde319",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Try to get a widget of your choice to display here...\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4faef101-3b7f-4b20-b48e-7d33968612a5",
    "metadata": {},
    "source": [
@@ -158,9 +184,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
