--- a/reference/complete-ipywidgets-widget-list.ipynb
+++ b/reference/complete-ipywidgets-widget-list.ipynb
@@ -1468,9 +1468,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "widgets-tutorial",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "widgets-tutorial"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1482,7 +1482,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.11.9"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
