--- a/02a_nbdev.ipynb
+++ b/02a_nbdev.ipynb
@@ -121,6 +121,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| export\n",
     "# TODO: add the missing export directive to export this cell to the dashboard module\n",
     "from IPython import get_ipython\n",
     "from IPython.core.magic import register_line_magic, register_cell_magic\n",
