Essentially addressed almost all suggestions by @mwcraig on Jun 25.

--- a/02a_nbdev.ipynb
+++ b/02a_nbdev.ipynb
@@ -121,7 +121,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
     "# TODO: add the missing export directive to export this cell to the dashboard module\n",
     "from IPython import get_ipython\n",
     "from IPython.core.magic import register_line_magic, register_cell_magic\n",
@@ -389,7 +388,7 @@
     "\n",
     "Great job! Now we know the basic idea of what nbdev does. \n",
     "\n",
-    "**EXERCISE**: Go ahead and use the `%load` line magic inspect the exported `dashboard.__init__` file below."
+    "**EXERCISE**: Go ahead and use the `%load` line magic to inspect the exported `dashboard.__init__` file below."
    ]
   },
   {
