--- a/02b_widgets.ipynb
+++ b/02b_widgets.ipynb
@@ -32,7 +32,7 @@
     "### Steps You Will Take In This Notebook\n",
     "In this notebook you will:\n",
     "1. Briefly review ipywidgets.\n",
-    "2. Load data from file.\n",
+    "2. Load data from a file.\n",
     "3. Review the role of traits and how they can be used to create interactivity with widgets.\n",
     "4. Create an interactive slider widget to select and display selected range of years.  To do this we must:\n",
     "    - Use the slider value to update the `selected` data.\n",
@@ -116,7 +116,7 @@
     "+ A communication framework between the front end (your browser) and back end (Python or other kernel).\n",
     "+ A set of fundamental user interface elements like buttons and checkboxes.\n",
     "\n",
-    "Execute the next cell create a browser of the available elements. To see some example code for implementing any of the elements click on its title. It will be easier to view both this overview and [the code examples](reference/complete-ipywidgets-widget-list.ipynb) if you have them open in separate tabs.\n",
+    "Execute the next cell to create a browser of the available elements. To see some example code for implementing any of the elements click on its title. It will be easier to view both this overview and [the code examples](reference/complete-ipywidgets-widget-list.ipynb) if you have them open in separate tabs.\n",
     "\n",
     "Additional Resources:\n",
     "- [nicole-brewer/awesome-jupyter-widgets](https://github.com/nicole-brewer/awesome-jupyter-widgets) lists many packages taking advantage of Jupyter widgets\n",
@@ -454,7 +454,9 @@
    "id": "355286a4",
    "metadata": {},
    "source": [
-    "And now let's test it by directing the `observe` method to call this new `on_range_change` every time the value of the slider changes. While we do this, let's address a poor Jupyter widget programming practice we showed earlier.  There is an optional second argument to the `observe` method which is the name of the trait to watch for changes.  We didn't include it... this is not a good choice.\n",
+    "And now let's test it by directing the `observe` method to call this new `on_range_change` every time the value of the slider changes. \n",
+    "\n",
+    "While we do this, let's address a poor Jupyter widget programming practice we showed earlier.  There is an optional second argument to the `observe` method which is the name of the trait to watch for changes.  We didn't include it... this is not a good choice.\n",
     "\n",
     "While the name of the trait to watch is technically optional, you really should always include it.  Why?  It has a default value of 'All' which watches all traits. This includes traits that start with an underscore (i.e. traits meant by the programmer to be private).  Furthermore, if too many changes occur at once, there is a chance your function will be called on a change to one of these internal traits - such as '_property_lock' - and cause your callback to fail or even silently cause unexpected behavior.\n",
     "\n",
@@ -558,7 +560,7 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "# %answer key/dashboard/widgets.py  46\n",
+    "# %answer key/dashboard/widgets.py 46\n",
     "\n",
     "# year_range.observe()"
    ]
@@ -670,7 +672,7 @@
    "source": [
     "Cool! Now the only thing that is missing is that we want to call this function every time the range is updated. How might we go about that?\n",
     "\n",
-    "Let's connect the `on_range_change` function to the `year_range` widget with the `observe` method."
+    "Let's connect the `output_selected_dataframe` function to the `year_range` widget with the `observe` method."
    ]
   },
   {
@@ -736,13 +738,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "45723cad",
+   "metadata": {},
+   "source": [
+    "And now lets change our previous `output_selected_dataframe` handler function to view this `selected_data_grid` DataGrid widget inside the `selected_dataframe_view` Output widget."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "5fd291e8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "selected_data_grid"
+    "# Create a handler function that will display the selected dataframe\n",
+    "def output_selected_dataframe(change):\n",
+    "    selected_dataframe_view.clear_output(wait=True)\n",
+    "    with selected_dataframe_view:\n",
+    "        display(selected_data_grid)\n",
+    "\n",
+    "# Call the function (since called outside observe method, use None as argument)\n",
+    "output_selected_dataframe(None)"
    ]
   },
   {
@@ -904,10 +921,12 @@
     "\n",
     "def on_window_size_change(change):\n",
     "    global original_df, selected_df # Remember to access the global variables\n",
-    "    # catch the change in the window_size widget value and update the original_df\n",
-    "    # original_df['Smoothed Data'] = savgol_filter(original_df['Temperature'],\n",
-    "    #                                              window_size,\n",
-    "    #                                              poly_order).round(decimals=3)\n",
+    "    # Update the following call to update the original_df['Smoothed Data'] column\n",
+    "    # values to properly capture the change in window_size value and the\n",
+    "    # current poly_order value.\n",
+    "    original_df['Smoothed Data'] = savgol_filter(original_df['Temperature'],\n",
+    "                                                 window_size,\n",
+    "                                                 poly_order).round(decimals=3)\n",
     "    selected_df = original_df[(original_df['Year'] >= year_range.value[0])\n",
     "                              & (original_df['Year'] <= year_range.value[1])]"
    ]
@@ -917,7 +936,9 @@
    "id": "4b09b2f2-4e82-46b1-b302-ef6e64acd595",
    "metadata": {},
    "source": [
-    "Then do you recall what function we used to display the dataframe? It was `display_selected_dataframe`. Let's make sure we add both to the functions observed by `window_size`."
+    "Then do you recall what function we used to display the dataframe? It was `update_selected_datagrid`. \n",
+    "\n",
+    "Let's update add both of these handler functions (`on_window_size_change` and `update_selected_datagrid`) as a handler function for the `observe` method of `window_size`."
    ]
   },
   {
@@ -969,12 +990,14 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "# %answer key/dashboard/widgets.py 83\n",
+    "# %answer key/dashboard/widgets.py 84\n",
     "\n",
     "def on_poly_order_change(change):\n",
     "    global original_df, selected_df\n",
-    "    # catch the change in the poly_order widget value and update the original_df\n",
-    "    # original_df['Smoothed Data'] = savgol_filter(original_df['Temperature'], window_size, poly_order).round(decimal=3)\n",
+    "    # Change the following line that sets the 'Smoothed Data' column of original_df\n",
+    "    # to catch the change in poly_order widget value and update the original_df for it.\n",
+    "    # Remember to also catch the current window_size value.\n",
+    "    original_df['Smoothed Data'] = savgol_filter(original_df['Temperature'], window_size, poly_order).round(decimal=3)\n",
     "    selected_df = original_df[(original_df['Year'] >= year_range.value[0]) & (original_df['Year'] <= year_range.value[1])]"
    ]
   },
@@ -1039,7 +1062,7 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "# %answer key/dashboard/widgets.py 89\n",
+    "# %answer key/dashboard/widgets.py 90\n",
     "\n",
     "def on_window_size_change(change):\n",
     "    global original_data, selected_df, poly_order\n",
@@ -1160,12 +1183,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4e597e2",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
    "id": "3ced1b75-94e3-462a-b4fd-8697652f63aa",
    "metadata": {},
    "source": [
@@ -1184,7 +1201,7 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "# %answer key/dashboard/widgets.py 99\n",
+    "# %answer key/dashboard/widgets.py 100\n",
     "\n",
     "# create an output widget called plot_view"
    ]
@@ -1213,7 +1230,7 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "# %answer key/dashboard/widgets.py 101\n",
+    "# %answer key/dashboard/widgets.py 102\n",
     "\n",
     "def output_plot(change):\n",
     "    plot_view.clear_output(wait=True)\n",
