--- a/02c_layout.ipynb
+++ b/02c_layout.ipynb
@@ -65,8 +65,8 @@
     "# %answer key/dashboard/main.py 5\n",
     "\n",
     "import ipywidgets as widgets\n",
-    "from dashboard.widgets import (year_range, window_size, poly_order, selected_data_grid,\n",
-    "                               update_selected_datagrid, plot_view, output_plot) # import year_range, window_size, poly_order, selected_data_grid, update_selected_datagrid, plot_view, output_plot"
+    "# import year_range, window_size, poly_order, selected_data_grid,\n",
+    "# update_selected_datagrid, plot_view, and output_plot"
    ]
   },
   {
