Updated solutions to 02b_widgets.ipynb and tweaked some instructions.

--- a/02b_widgets.ipynb
+++ b/02b_widgets.ipynb
@@ -328,7 +328,8 @@
     "#| export\n",
     "# %answer key/dashboard/widgets.py 26\n",
     "\n",
-    "selected_df = original_df[(original_df['Year'] >= year_range.value[0]) & (original_df['Year'] <= year_range.value[1])] # selected_df = original_df[(original_df['Year'] >= from_year) & (original_df['Year'] <= to_year)]"
+    "# selected_df = original_df[(original_df['Year'] >= from_year)\n",
+    "#                           & (original_df['Year'] <= to_year)]"
    ]
   },
   {
@@ -386,7 +387,7 @@
    "source": [
     "# Attach the above 'handler' function to the widget so that it gets called whenever a\n",
     "# trait of the widget changes.\n",
-    "year_range.observe(on_range_change)  # Warning: This is actually a poor practice, see below..."
+    "year_range.observe(on_range_change) # Warning: This is actually a poor practice, see below..."
    ]
   },
   {
@@ -742,7 +743,18 @@
    "id": "45723cad",
    "metadata": {},
    "source": [
-    "And now lets change our previous `output_selected_dataframe` handler function to view this `selected_data_grid` DataGrid widget inside the `selected_dataframe_view` Output widget."
+    "And let's view our selected dataframe in this widget"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8387bea9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Display the DataGrid widget here\n",
+    "selected_data_grid"
    ]
   },
   {
@@ -990,15 +1002,18 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "# %answer key/dashboard/widgets.py 84\n",
+    "# %answer key/dashboard/widgets.py 85\n",
     "\n",
     "def on_poly_order_change(change):\n",
     "    global original_df, selected_df\n",
     "    # Change the following line that sets the 'Smoothed Data' column of original_df\n",
     "    # to catch the change in poly_order widget value and update the original_df for it.\n",
     "    # Remember to also catch the current window_size value.\n",
-    "    original_df['Smoothed Data'] = savgol_filter(original_df['Temperature'], window_size, poly_order).round(decimal=3)\n",
-    "    selected_df = original_df[(original_df['Year'] >= year_range.value[0]) & (original_df['Year'] <= year_range.value[1])]"
+    "    original_df['Smoothed Data'] = savgol_filter(original_df['Temperature'],\n",
+    "                                                 window_size,\n",
+    "                                                 poly_order).round(decimal=3)\n",
+    "    selected_df = original_df[(original_df['Year'] >= year_range.value[0])\n",
+    "                              & (original_df['Year'] <= year_range.value[1])]"
    ]
   },
   {
@@ -1062,7 +1077,7 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "# %answer key/dashboard/widgets.py 90\n",
+    "# %answer key/dashboard/widgets.py 91\n",
     "\n",
     "def on_window_size_change(change):\n",
     "    global original_data, selected_df, poly_order\n",
@@ -1201,7 +1216,7 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "# %answer key/dashboard/widgets.py 100\n",
+    "# %answer key/dashboard/widgets.py 101\n",
     "\n",
     "# create an output widget called plot_view"
    ]
@@ -1230,7 +1245,7 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "# %answer key/dashboard/widgets.py 102\n",
+    "# %answer key/dashboard/widgets.py 103\n",
     "\n",
     "def output_plot(change):\n",
     "    plot_view.clear_output(wait=True)\n",
@@ -1368,7 +1383,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
