CLeaned up 02c_layout.ipynb and updated the solutions.

--- a/02c_layout.ipynb
+++ b/02c_layout.ipynb
@@ -9,6 +9,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import exception handling\n",
+    "import dashboard"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "7ea8e075",
    "metadata": {},
@@ -36,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "5d62ce64-3f56-4ac4-8d8b-1eeb94f22c1e",
    "metadata": {},
    "outputs": [],
@@ -62,11 +72,9 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "# %answer key/dashboard/main.py 5\n",
-    "\n",
+    "# %answer key/02c/01.py\n",
     "import ipywidgets as widgets\n",
-    "# import year_range, window_size, poly_order, selected_data_grid,\n",
-    "# update_selected_datagrid, plot_view, and output_plot"
+    "# import year_range, window_size, poly_order, selected_data_grid, update_selected_datagrid, plot_view, output_plot"
    ]
   },
   {
@@ -81,10 +89,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "3d909af2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'selected_data_grid' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[6], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Display dataframe\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[43mselected_data_grid\u001b[49m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'selected_data_grid' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Display dataframe\n",
     "selected_data_grid"
@@ -321,7 +341,7 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "# %answer key/dashboard/main.py 28"
+    "# %answer key/dashboard/main.py 29"
    ]
   },
   {
@@ -361,7 +381,7 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "# %answer key/dashboard/main.py 32"
+    "# %answer key/dashboard/main.py 33"
    ]
   },
   {
@@ -477,8 +497,8 @@
    "source": [
     "#| export\n",
     "# Define the widget containing the curve smoothing parameters\n",
-    "curve_parameters_layout = widgets.Layout(width = '500px', justify_content = 'space-between')\n",
-    "curve_parameter_widgets = widgets.HBox(children = (window_size, poly_order), \n",
+    "curve_parameters_layout = widgets.Layout(width='500px', justify_content='space-between')\n",
+    "curve_parameter_widgets = widgets.HBox(children=(window_size, poly_order), \n",
     "                                       layout=curve_parameters_layout)"
    ]
   },
@@ -531,7 +551,7 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "# %answer key/dashboard/main.py 46\n",
+    "# %answer key/dashboard/main.py 47\n",
     "\n",
     "# Create a VBox to hold the description and control widgets\n",
     "# add children intro_text, data_source_text, year_range, curve_parameter_widgets\n"
@@ -582,7 +602,7 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "# %answer key/dashboard/main.py 51\n",
+    "# %answer key/dashboard/main.py 52\n",
     "\n",
     "# how might we add padding to each of the widgets\n"
    ]
@@ -603,7 +623,7 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "# %answer key/dashboard/main.py 53\n",
+    "# %answer key/dashboard/main.py 54\n",
     "\n",
     "# Add a vertical box holding both table and plot visualizations of selected data\n"
    ]
@@ -716,7 +736,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
