CLeaned up 02c_layout.ipynb and updated the solutions.

--- a/02c_layout.ipynb
+++ b/02c_layout.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "5d62ce64-3f56-4ac4-8d8b-1eeb94f22c1e",
    "metadata": {},
    "outputs": [],
@@ -91,10 +91,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "3d909af2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'selected_data_grid' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[6], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Display dataframe\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[43mselected_data_grid\u001b[49m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'selected_data_grid' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Display dataframe\n",
     "selected_data_grid"
@@ -541,7 +553,7 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "# %answer key/dashboard/main.py 46\n",
+    "# %answer key/dashboard/main.py 47\n",
     "\n",
     "# Create a VBox to hold the description and control widgets\n",
     "# add children intro_text, data_source_text, year_range, curve_parameter_widgets\n"
@@ -592,7 +604,7 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "# %answer key/dashboard/main.py 51\n",
+    "# %answer key/dashboard/main.py 52\n",
     "\n",
     "# how might we add padding to each of the widgets\n"
    ]
@@ -613,7 +625,7 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "# %answer key/dashboard/main.py 53\n",
+    "# %answer key/dashboard/main.py 54\n",
     "\n",
     "# Add a vertical box holding both table and plot visualizations of selected data\n"
    ]
