Fixed solutions issues with 02c_layout

--- a/02c_layout.ipynb
+++ b/02c_layout.ipynb
@@ -10,7 +10,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "id": "9c1f4fdd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "5d62ce64-3f56-4ac4-8d8b-1eeb94f22c1e",
    "metadata": {},
    "outputs": [],
@@ -72,9 +73,10 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "# %answer key/02c/01.py\n",
+    "# %answer key/dashboard/main.py 6\n",
+    "\n",
     "import ipywidgets as widgets\n",
-    "# import year_range, window_size, poly_order, selected_data_grid, update_selected_datagrid, plot_view, output_plot"
+    "# import year_range, window_size, poly_order, selected_data_grid, update_selected_datagrid, plot_view, output_plot\n"
    ]
   },
   {
@@ -89,22 +91,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "3d909af2",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'selected_data_grid' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[6], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Display dataframe\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[43mselected_data_grid\u001b[49m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'selected_data_grid' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Display dataframe\n",
     "selected_data_grid"
@@ -702,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "aa9e694b-a2ab-4da1-b984-85f062f5e9d1",
    "metadata": {},
    "outputs": [],
